remove maps for test

--- a/views/colleges/index.ejs
+++ b/views/colleges/index.ejs
@@ -43,4 +43,4 @@
         const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
         const colleges = {features: <%- JSON.stringify(colleges) %>};
     </script>
-<script src="/javascripts/clusterMap.js"></script>
+<!-- <script src="/javascripts/clusterMap.js"></script> -->
