--- a/views/colleges/show.ejs
+++ b/views/colleges/show.ejs
@@ -101,4 +101,4 @@
     const college = <%- JSON.stringify(college) %>
 </script>
 
-<script src="/javascripts/showPageMap.js"></script>
+<!-- <script src="/javascripts/showPageMap.js"></script> -->
