--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,7 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Collegrity</a>
+<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark" style="box-shadow: rgb(255, 253, 107) 0px 25px 20px -20px;">
+  <div class="container-fluid" >
+    <img class=" float-md-left mx-3" src="/icon.png" alt="" width="45px" height="38px">
+    <a class="integrity navbar-brand" href="#">Collegrity</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
