--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -6,14 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collegrity- Your voice matters!</title>
 
+    <!-- Favicon -->
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+
+    <!-- Mapbox packages -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+
+    <!-- AOS Package -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <!-- Global CSS -->
     <link rel="stylesheet" href="/stylesheets/globalStyle.css">
 </head>
+
 
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
