--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,21 +1,22 @@
 <% layout('layout/boilerplate') %>
 
-<h1>Log in to Collegrity !</h1>
-
-<form action="/login" method="POST" class="validated-form" novalidate>
-  <div class="mb-3">
-    <label class="form-label" for="username">Username</label>
-    <input class="form-control" type="username" id="user" name="username" required>
-    <div class="valid-feedback">
-        Looks good!
+<div class="col-6 offset-3">
+  <h1>Log in to Collegrity !</h1>
+  <form action="/login" method="POST" class="validated-form" novalidate>
+    <div class="mb-3">
+      <label class="form-label" for="username">Username</label>
+      <input class="form-control" type="username" id="user" name="username" required>
+      <div class="valid-feedback">
+          Looks good!
+      </div>
     </div>
-  </div>
-  <div class="mb-3">
-    <label class="form-label" for="password">Password</label>
-    <input class="form-control" type="password" id="password" name="password" required>
-    <div class="valid-feedback">
-        Looks good!
+    <div class="mb-3">
+      <label class="form-label" for="password">Password</label>
+      <input class="form-control" type="password" id="password" name="password" required>
+      <div class="valid-feedback">
+          Looks good!
+      </div>
     </div>
-  </div>
-  <button class="btn btn-success">Login</button>
-</form>
+    <button class="btn btn-success">Login</button>
+  </form>
+</div>
