--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,28 +1,30 @@
 <% layout('layout/boilerplate') %>
 
-<h1>Register as student</h1>
+<div class="col-6 offset-3">
+  <h1>Register as student</h1>
 
-<form action="/register" method="POST" class="validated-form" novalidate>
-  <div class="mb-3">
-    <label class="form-label" for="username">Username</label>
-    <input class="form-control" type="username" id="user" name="username" required>
-    <div class="valid-feedback">
-        Looks good!
+  <form action="/register" method="POST" class="validated-form" novalidate>
+    <div class="mb-3">
+      <label class="form-label" for="username">Username</label>
+      <input class="form-control" type="username" id="user" name="username" required>
+      <div class="valid-feedback">
+          Looks good!
+      </div>
     </div>
-  </div>
-  <div class="mb-3">
-    <label class="form-label" for="email">Email</label>
-    <input class="form-control" type="email" id="email" name="email" required>
-    <div class="valid-feedback">
-        Looks good!
+    <div class="mb-3">
+      <label class="form-label" for="email">Email</label>
+      <input class="form-control" type="email" id="email" name="email" required>
+      <div class="valid-feedback">
+          Looks good!
+      </div>
     </div>
-  </div>
-  <div class="mb-3">
-    <label class="form-label" for="password">Password</label>
-    <input class="form-control" type="password" id="password" name="password" required>
-    <div class="valid-feedback">
-        Looks good!
+    <div class="mb-3">
+      <label class="form-label" for="password">Password</label>
+      <input class="form-control" type="password" id="password" name="password" required>
+      <div class="valid-feedback">
+          Looks good!
+      </div>
     </div>
-  </div>
-  <button class="btn btn-success">Submit</button>
-</form>
+    <button class="btn btn-success">Submit</button>
+  </form>
+</div>
