--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -7,7 +7,7 @@
     <title>Collegrity- Your voice matters!</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/icon.png" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
