--- a/public/stylesheets/globalStyle.css
+++ b/public/stylesheets/globalStyle.css
@@ -1,6 +1,47 @@
 *{
   font-family: 'PT Serif', serif;
 }
+.back-to-top{
+  text-decoration: none;
+  display: inline-block;
+  background-color: #FF9800;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+
+.back-to-top::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+.back-to-top:hover {
+  text-decoration: none;
+  cursor: pointer;
+  background-color: #333;
+}
+.back-to-top:active {
+  background-color: #555;
+}
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+
 .integrity{
   font-family: 'Playfair Display', serif;
 }
