--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -9,6 +9,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="/icon.png" type="image/x-icon">
 
+    <!-- Fontawesome package -->
+    <script src="https://kit.fontawesome.com/589b148752.js" crossorigin="anonymous"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
