--- a/views/colleges/edit.ejs
+++ b/views/colleges/edit.ejs
@@ -2,8 +2,7 @@
 
 <!-- <link rel="stylesheet" href="/stylesheets/checkboxes.css"> -->
 
-<div class="row">
-    <div class="col-6 offset-3">
+    <div class="card p-5 my-3 mx-auto" style="max-width:600px;" data-aos="zoom-in">
         <h1 class="text-center">Edit college</h1>
         <form action="/colleges/<%=college._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype = "multipart/form-data">
             <div class="mb-3">
@@ -63,4 +62,3 @@
         </form>
 
     </div>
-</div>
