--- a/views/colleges/show.ejs
+++ b/views/colleges/show.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="row mb-5 py-4" style="box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
-<div class="col-6 " >
+<div class="col-sm-6 " >
     <div class="card mb-3">
         <div id="collegeCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -45,7 +45,7 @@
         </div>
     </div>
 </div>
-<div class="col-6">
+<div class="col-sm-6">
     <div id='map' style='width: 100%; height: 300px;'></div>
     <br>
     
