--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,6 +1,6 @@
 <% layout('layout/boilerplate') %>
 
-<div class="col-6 offset-3">
+<div class="card p-5 my-3 mx-auto" style="max-width:600px;">
   <h1>Register as student</h1>
 
   <form action="/register" method="POST" class="validated-form" novalidate>
