--- a/public/stylesheets/globalStyle.css
+++ b/public/stylesheets/globalStyle.css
@@ -1,10 +1,31 @@
-*{
-  font-family: 'PT Serif', serif;
+body{
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  color: white;
+}
+.navbar{
+  background-image: linear-gradient(to right, #2b2b2b, #000000);
+}
+.nav-link{
+  transition-duration: 0.5s;
+}
+.nav-link:hover{
+  color: rgba(69, 55, 200, 0.934) !important;
+}
+#map{
+  margin-top: 0px;;
+  width: 100%; 
+  height: 500px; 
+  border-radius: 1%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  
+}
+.search-college{
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 .back-to-top{
+  box-shadow: rgba(202, 202, 202, 0.2) 0px 7px 29px 0px;
   text-decoration: none;
   display: inline-block;
-  background-color: #FF9800;
+  background-color: #0e0429;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -26,7 +47,7 @@
   font-style: normal;
   font-size: 2em;
   line-height: 50px;
-  color: #fff;
+  color: #fff700;
 }
 .back-to-top:hover {
   text-decoration: none;
@@ -41,7 +62,15 @@
   visibility: visible;
 }
 
-
+.card{
+  background-image: linear-gradient(to right, #313131, #000000);
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  border-radius: 1%;
+}
+.row{
+  background-image: linear-gradient(to right, #313131, #000000);
+  border-radius: 1%;
+}
 .integrity{
   font-family: 'Playfair Display', serif;
 }
@@ -52,4 +81,9 @@
 }
 .btn-primary:hover{
   background-color: rgb(57, 43, 182);
+}
+footer{
+  background-image: linear-gradient(to right, #2b2b2b, #000000);
+  color: white;
+  padding: 1em;
 }
