--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer bg-dark py-3 mt-auto">
   <div class="container">
-    <span class="text-muted">
+    <span >
       &copy; Collegrity 2023
     </span>
   </div>
