--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark" style="box-shadow: rgb(255, 253, 107) 0px 25px 20px -20px;">
+<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark" >
   <div class="container-fluid" >
     <img class=" float-md-left mx-3" src="/icon.png" alt="" width="45px" height="38px">
     <a class="integrity navbar-brand" href="#">Collegrity</a>
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="/">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/colleges">Colleges</a>
