--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,6 @@
 <% layout('layout/boilerplate') %>
 
-<div class="col-6 offset-3">
+<div class="card p-5 my-3 mx-auto" style="max-width:600px;">
   <h1>Log in to Collegrity !</h1>
   <form action="/login" method="POST" class="validated-form" novalidate>
     <div class="mb-3">
