solve avg rating bug

--- a/views/colleges/show.ejs
+++ b/views/colleges/show.ejs
@@ -52,7 +52,7 @@
     <div class="ratings">
         <div class="empty-stars"></div>
         <div class="full-stars" style=<%= stringPercentage %>></div>
-        4.3 stars and <%= college.reviews.length %> ratings 
+        <%= avgRating %> stars and <%= college.reviews.length %> ratings 
     </div>
     <% if(currentUser) {%>
     <h2>Leave a Review </h2>
