--- a/views/colleges/index.ejs
+++ b/views/colleges/index.ejs
@@ -20,7 +20,7 @@
     
     <div class="card my-4"  data-aos="zoom-in" style="box-shadow: rgba(14, 14, 102, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 p-3">
                 <% if(college.images.length) {%>
                     <img class="img-fluid"src="<%= college.images[0].url %>" alt="" class="img-fluid" style="width:100%; height:100%, max-height:300px">
                     <% } else{ %>
