Make search sticky

--- a/views/colleges/index.ejs
+++ b/views/colleges/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/boilerplate') %>
 <div class="my-5" id="map" data-aos="zoom-out"></div>
 <hr>
-<form action="/colleges/search" method="GET" novalidate class="validated-form" enctype = "multipart/form-data" data-aos="flip-left">
+<form action="/colleges/search" method="GET" novalidate class="search-form validated-form" enctype = "multipart/form-data" data-aos="flip-left">
     <div class="input-group search-college mb-3 mx-auto p-1" style="max-width: 600px;" >
         <input type="text" class="form-control" placeholder="Search colleges" aria-label="Search Colleges" aria-describedby="basic-addon2" id="collegeName" name="collegeName">
         <div class="input-group-append">
