--- a/public/stylesheets/globalStyle.css
+++ b/public/stylesheets/globalStyle.css
@@ -4,8 +4,6 @@ body{
 }
 .navbar{
   background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-  /* background-image: linear-gradient(to right, #2b2b2b, #000000);
-  background-image: linear-gradient(to right, #2b2b2b, #000000); */
 }
 .nav-link{
   transition-duration: 0.5s;
@@ -19,6 +17,11 @@ body{
   height: 500px; 
   border-radius: 1%;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;  
+}
+.search-form{
+  position: sticky;
+  top: 5px;
+  z-index: 1000;
 }
 .search-college{
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
