--- a/views/colleges/show.ejs
+++ b/views/colleges/show.ejs
@@ -50,9 +50,26 @@
     <br>
     
     <div class="ratings">
-        <div class="empty-stars"></div>
-        <div class="full-stars" style=<%= stringPercentage %>></div>
-        <%= avgRating %> stars and <%= college.reviews.length %> ratings 
+        <div id="parent1">
+            <i class="star star-under fa fa-star">
+            <i class="star star-over fa fa-star star-visible" style="<%= starArray[0] %>"></i>
+          </i>
+          <i class="star star-under fa fa-star">
+            <i class="star star-over fa fa-star star-visible" style="<%= starArray[1] %>"></i>
+          </i>
+          <i class="star star-under fa fa-star">
+            <i class="star star-over fa fa-star star-visible" style="<%= starArray[2] %>"></i>
+          </i>
+          <i class="star star-under fa fa-star">
+            <i class="star star-over fa fa-star star-visible" style="<%= starArray[3] %>"></i>
+          </i> 
+          <i class="star star-under fa fa-star">
+            <i class="star star-over fa fa-star star-visible" style="<%= starArray[4] %>"></i>
+              </i>
+        </div>
+        <span class="text-muted" style="font-size: 1.1em;">
+            <%= avgRating %> stars and <%= college.reviews.length %> ratings 
+        </span>
     </div>
     <% if(currentUser) {%>
     <h2>Leave a Review </h2>
