--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -27,6 +27,10 @@
 
     <!-- Global CSS -->
     <link rel="stylesheet" href="/stylesheets/globalStyle.css">
+
+    <!-- curves js -->
+    <script src="/javascripts/curves.js"></script>
+    <script src="/javascripts/three.js"></script>
 </head>
 
 
